--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 </html>
 
 <figure>
-  <figcaption>More stuff coming soon (maybe)</figcaption>
+  <figcaption> These pages don't actually do anything, I just needed the website to have three pages for the school project. Fortunatly my digital design teacher is the ultimate chiller and recognized the hard work I put into the main page. There is a non-zero chance that I'll add new stuff later on tho. </figcaption>
 </figure>
 
 <a href="index.html">Back</a>
