--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 </head>
 <body>
-    <h1>Scribing and Slaying</h1>
+    <h1>Scribing & Slaying</h1>
 	<!-- My site navigation, it gets styled with the div class "nav" -->
 	<div class="nav">
 <ul>
