--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
             <div class="color-option" data-color="red" style="background-color: red;"></div>
             <div class="color-option" data-color="orange" style="background-color: orange;"></div>
             <div class="color-option" data-color="yellow" style="background-color: yellow;"></div>
-            <div class="color-option" data-color="green" style="background-color: green;"></div>
-            <div class="color-option" data-color="blue" style="background-color: blue;"></div>
-            <div class="color-option" data-color="purple" style="background-color: purple;"></div>
+            <div class="color-option" data-color="lime" style="background-color: lime;"></div>
+            <div class="color-option" data-color="cyan" style="background-color: cyan;"></div>
+            <div class="color-option" data-color="magenta" style="background-color: magenta;"></div>
         </div>
     <div id="zoomControls">
             <button id="zoomIn">+</button>
